# pysword

./: .gitignore  CMakeLists.txt  README.md  environment.yaml  pyproject.toml  setup.py
csrc/basicmath/lib/: basicmath.h
csrc/basicmath/src/: basicmath.cpp  main.cpp
csrc/gputensor/lib/: gputensor.h  ops.h
csrc/gputensor/src/: gputensor.cpp  gputensor.cu  main.cpp  ops.cu
examples/: simple_lin_model.py
pysword/: __init__.py  basefunc.py  config.py  func.py  layers.py  loss.py  model.py  simplefunc.py  tensor.py
pysword/tensor/: __init__.py  tensor.py
simple_models/: simple_lin_model.py
tests/: test_1.py  test_model.py
